tests/fails/f38.t

terra foo()
    var a : int[2]
  return a[3.3]
end
foo()